[project]
name = "marker"
version = "1.2.6"
description = "Convert PDF to markdown with high speed and accuracy."
readme = "README.md"
keywords = ["pdf", "markdown", "ocr", "nlp"]
authors = [
    {name = "Vik Paruchuri", email = "github@vikas.sh"},
    {name = "Quang Ngoc DUONG", email = "quangngoc88@gmail.com"},
]
license = {text = "GPL-3.0-or-later"}
requires-python = "<4.0,>=3.10"

dependencies = [
    "Pillow==10.4.0",
    "pydantic==2.10.4",
    "pydantic-settings>=2.7.1",
    "transformers==4.47.1",
    "python-dotenv>=1.0.1",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "tabulate>=0.9.0",
    "ftfy>=6.3.1",
    "texify>=0.2.1",
    "rapidfuzz>=3.11.0",
    "surya-ocr~=0.8.3",
    "regex>=2024.4.28",
    "pdftext~=0.4.1",
    "tabled-pdf~=0.2.0",
    "markdownify==0.13.1",
    "click>=8.1.8",
    "google-generativeai>=0.8.3",
    "markdown2>=2.5.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "datasets==2.21.0",
    "streamlit>=1.41.1",
    "fastapi>=0.115.6",
    "uvicorn==0.32.1",
    "python-multipart==0.0.16",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"